A few styling fixes, non glowing crown crest in footer / extra space after button

--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -31,6 +31,10 @@
     color: #171819; 
 }
 
+a.crown-link:focus {
+    background-color: transparent;
+}
+
 #footer h2 {
     @include core-24($line-height: (5/4), $font-weight: (400));
     color: #171819;
